Task1/practicing_docker/azure_trial_yaml/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
   name: nginx-depl
   labels: 
     app: nginx
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata: 
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.16
          ports: 
          - containerPort: 80
