Task1/practicing_docker/azure_trial_yaml/yamlservice.yaml
apiVersion: v1
kind: Service
metadata: 
   name: nginx-service
spec: 
  selector:
    app: nginx
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 8070
