Task1/practicing_docker/azure_trial_yaml/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: database-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      path: 
       - backend:
          serviceName: kubernetes-dashoard
          servicePort: 80
